--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <meta charset="utf-8">
  </head>
  <body>
-  <p><img src="smiley.gif" width="500px"><br>Hi Smiley!</p>
+  <p><img src="smiley.gif" width="500px"></p>
 </body>
 </html>
