--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
  </head>
  <body>
+  <h1>The img element</h1>
   <p><img src="smiley.gif" width="500px"></p>
 </body>
 </html>
