--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  </head>
  <body>
   <h1>The img element</h1>
-  <p><img src="smiley.gif" width="500px"></p>
+  <p><img src="smiley.gif" alt="Hi Smiley" width="500" height="500"></p>
 </body>
 </html>
