--- a/b.html
+++ b/b.html
@@ -11,6 +11,6 @@
   </a>
 <p>절대경로</p>
 <!--github의 개인 URL로 테스트 해보세요 -->
- <img src="https://dbeod.github.io/web1/smiley.gif">
+ <img src="https://seo-hii.github.io/alpha/smiley.gif">
 </body>
 </html>
