--- a/b.html
+++ b/b.html
@@ -7,7 +7,7 @@
 <img src="smiley.gif" alt="Smiley face" width="42" height="42">
 <p>상대경로</p>
   <a href="../smiley.gif" download>
-      <img src="../smiley.gif" alt="Smiley face" width="42" height="42">
+      <img src="../smiley.gif" type="image/gif" alt="Smiley face" width="42" height="42">
   </a>
 <p>절대경로</p>
 <!--github의 개인 URL로 테스트 해보세요 -->
