--- a/b.html
+++ b/b.html
@@ -6,7 +6,7 @@
 <!--html파일과 같은 폴더 안에 있어야 이미지가 보여집니다. -->
 <img src="smiley.gif" alt="Smiley face" width="42" height="42">
 <p>상대경로</p>
-  <a href="../smiley.gif" download>
+  <a href="../smiley.gif" download="smiley.gif">
       <img src="../smiley.gif" type="image/gif" alt="Smiley face" width="42" height="42">
   </a>
 <p>절대경로</p>
