--- a/b.html
+++ b/b.html
@@ -8,7 +8,7 @@
 <p>상대경로</p>
   <a href="./smiley.gif" download>
       <img src="./smiley.gif" alt="Smiley face" width="42" height="42">
-  </a>
+  </a> 다운로드 테스트 (./ 현재 폴더 경로)
 <p>절대경로</p>
 <!--github의 개인 URL로 테스트 해보세요 -->
  <img src="https://seo-hii.github.io/alpha/smiley.gif">
