--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
  <head>
   <title>서희 WEB HTML</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160745914-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160745914-1');
+</script>
  </head>
  <body>
   <h1>The img element</h1>
